--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/drawer_layout"
+    android:fitsSystemWindows="true"
+    android:background="#160730"
+    tools:openDrawer="start"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#160730"
+        android:id="@+id/lay">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.Toolbar
+            android:layout_alignParentTop="true"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:id="@+id/toolbar"
+            android:elevation="4dp"
+            android:background="#350B77"
+            app:navigationIcon="@drawable/menu2"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+<!--        <ImageView-->
+<!--            android:layout_width="@dimen/_30mdp"-->
+<!--            android:layout_height="@dimen/_30mdp"-->
+<!--            android:src="@drawable/menu2"-->
+<!--            android:layout_marginStart="@dimen/_5mdp"-->
+<!--            android:layout_marginTop="@dimen/_5mdp"-->
+<!--            android:scaleType="fitCenter"-->
+<!--            android:id="@+id/nav_btn"/>-->
+
+        <FrameLayout
+            android:layout_below="@+id/toolbar"
+            android:layout_centerInParent="true"
+            android:background="#350B77"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_400mdp"
+            android:id="@+id/fragment_container"/>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottonNavigationView"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_60mdp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="1dp"
+            android:background="@drawable/rec_bac"
+            app:elevation="50dp"
+            app:itemIconSize="@dimen/_30mdp"
+            app:itemIconTint="#27B5A7"
+            app:itemRippleColor="#520FC8"
+            app:itemTextColor="#27B5A7"
+            app:menu="@menu/bottom_nav">
+
+        </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="@dimen/_190mdp"
+        app:drawerLayoutCornerSize="@dimen/_35mdp"
+        android:layout_height="match_parent"
+        android:padding="@dimen/_5mdp"
+        android:layout_marginStart="@dimen/_200mdp"
+        android:id="@+id/nav_view"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/nav_menu_drawer"/>
+
+</androidx.drawerlayout.widget.DrawerLayout>
