--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -165,6 +165,14 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="@dimen/_7mdp">
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewpage"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_150mdp"
+                android:background="@drawable/background_rec"
+                android:layout_marginVertical="@dimen/_10mdp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
