--- a/app/src/main/res/layout/view_pager_layout.xml
+++ b/app/src/main/res/layout/view_pager_layout.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:backgroundTint="@drawable/background_rec">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background_rec">
 
     <ImageView
         android:id="@+id/viewpagerimg"
-        android:layout_width="@dimen/_200mdp"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/_200mdp"
         android:background="@drawable/background_rec"
-        android:src="@drawable/pageimg1"
         android:scaleType="centerCrop"
+        android:src="@drawable/pageimg1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
