--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,26 +7,33 @@
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
     android:fitsSystemWindows="true"
-    android:background="#160730"
-    tools:openDrawer="start"
+    android:background="@color/background_blue"
+    tools:openDrawer="end"
     tools:context=".MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#160730"
+        android:background="@drawable/dash_back"
         android:id="@+id/lay">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_alignParentTop="true"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:layout_alignParentTop="true"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:id="@+id/toolbar"
-            android:elevation="4dp"
-            android:background="#350B77"
-            app:navigationIcon="@drawable/menu2"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_40mdp"
+        android:layout_marginHorizontal="@dimen/_2mdp"
+        android:background="@drawable/tool_gr"
+        android:elevation="@dimen/_4mdp"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/menu2" />
 
 <!--        <ImageView-->
 <!--            android:layout_width="@dimen/_30mdp"-->
@@ -36,22 +43,30 @@
 <!--            android:layout_marginTop="@dimen/_5mdp"-->
 <!--            android:scaleType="fitCenter"-->
 <!--            android:id="@+id/nav_btn"/>-->
+    <fragment
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_300mdp"
+        android:layout_marginVertical="@dimen/_50mdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_400mdp"
-            android:layout_below="@+id/toolbar"
-            android:layout_centerInParent="true"
-            android:background="#350B77" />
+<!--        <FrameLayout-->
+<!--            android:id="@+id/fragment_container"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="@dimen/_400mdp"-->
+<!--            android:layout_below="@+id/toolbar"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:background="#350B77" />-->
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottonNavigationView"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_60mdp"
+            android:layout_height="@dimen/_58mdp"
             android:layout_gravity="bottom"
-            android:layout_marginBottom="1dp"
-            android:background="@drawable/rec_bac"
+            android:background="@drawable/nav_back"
             app:elevation="50dp"
             app:itemIconSize="@dimen/_30mdp"
             app:itemIconTint="#27B5A7"
@@ -68,6 +83,7 @@
         app:drawerLayoutCornerSize="@dimen/_35mdp"
         android:layout_height="match_parent"
         android:padding="@dimen/_5mdp"
+        android:visibility="gone"
         android:layout_marginStart="@dimen/_200mdp"
         android:id="@+id/nav_view"
         android:layout_gravity="start"
