--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -6,17 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/_160mdp">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="@dimen/_150mdp"
-        android:layout_height="@dimen/_100mdp"
-        android:background="#ffffff"
-        android:src="@drawable/app_logo"/>
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView"-->
+<!--        android:layout_width="@dimen/_150mdp"-->
+<!--        android:layout_height="@dimen/_100mdp"-->
+<!--        android:background="#ffffff"-->
+<!--        android:src="@drawable/app_logo"/>-->
 
-    <View
-        android:id="@+id/view2"
-        android:layout_width="@dimen/_150mdp"
-        android:layout_height="@dimen/_100mdp" />
+<!--    <View-->
+<!--        android:id="@+id/view2"-->
+<!--        android:layout_width="@dimen/_150mdp"-->
+<!--        android:layout_height="@dimen/_100mdp" />-->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
