--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:id="@+id/drawer_layout"
     android:fitsSystemWindows="true"
     tools:openDrawer="end"
-    tools:context=".MainActivity">
+    tools:context=".member.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
