--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="177dp"
         android:gravity="center"
-        android:text="Panskura Banamali College"
+        android:text=" "
         android:textColor="#FFD600"
         android:textSize="32sp"
         android:textStyle="bold"
@@ -49,7 +49,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="177dp"
         android:gravity="center"
-        android:text="(Autonomous)"
+        android:text="()"
         android:textColor="#FFD600"
         android:textSize="32sp"
         android:textStyle="bold"
@@ -58,16 +58,53 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_img" />
 
-    <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyleLargeInverse"
-        android:layout_width="352dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="151dp"
-        android:layout_marginEnd="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+<!--    <ProgressBar-->
+<!--        android:id="@+id/progressBar2"-->
+<!--        style="?android:attr/progressBarStyleLargeInverse"-->
+<!--        android:layout_width="352dp"-->
+<!--        android:layout_height="49dp"-->
+<!--        android:layout_marginStart="30dp"-->
+<!--        android:layout_marginTop="151dp"-->
+<!--        android:layout_marginEnd="25dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_view"
+        app:lottie_rawRes="@raw/loading"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        android:layout_width="@dimen/_70mdp"
+            android:layout_height="@dimen/_70mdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:layout_marginTop="@dimen/_10mdp"/>
+    <TextView
+        android:id="@+id/version"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:layout_marginBottom="@dimen/_4mdp"
+        android:text="Version - 2024.02.09"
+        android:layout_marginTop="@dimen/_10mdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/devby"/>
+    <TextView
+        android:id="@+id/devby"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:layout_marginBottom="@dimen/_13mdp"
+        android:text="Developed By - Genius Technology"
+        android:layout_marginTop="@dimen/_10mdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
