--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -18,7 +18,8 @@
 <!--        android:layout_width="@dimen/_150mdp"-->
 <!--        android:layout_height="@dimen/_100mdp" />-->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/lay"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
@@ -52,6 +53,12 @@
         android:textColor="@color/black"
         android:textSize="14sp"
         android:layout_marginBottom="16dp"/>
+
+        <View
+            android:layout_marginHorizontal="@dimen/_3mdp"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1mdp"
+            android:background="#757171"/>
     </LinearLayout>
 
 </RelativeLayout>
